Add TNS Names Configuration

--- a/docker/oracle-observer/Dockerfile
+++ b/docker/oracle-observer/Dockerfile
@@ -53,9 +53,11 @@ RUN rm -rf /opt/aws
 
 USER oracle:oinstall
 
+COPY configure_tnsnames.sh /home/oracle/configure_tnsnames.sh
+RUN  chmod u+x /home/oracle/configure_tnsnames.sh
 COPY dummyfile.txt /opt/response.txt
 
 EXPOSE 8080
 
 # Dummy command to keep container running during development
-CMD ["/bin/bash","-c","while true; do cat /opt/response.txt | nc -l -p 8080; done"]
+CMD ["/bin/bash","-c","/home/oracle/configure_tnsnames.sh; while true; do cat /opt/response.txt | nc -l -p 8080; done"]
