Do not run the observer during development

--- a/playbooks/oracle_ha/build-ha/tasks/main.yml
+++ b/playbooks/oracle_ha/build-ha/tasks/main.yml
@@ -18,6 +18,9 @@
     post_restore: true
   when: method is defined and method == "post"
 
+- debug:
+     var: method
+
 - name: (main) Set fact to only carry out FSFO Setup
   set_fact:
     fsfo_setup: true
