Oracle Data Guard Observer (#498)
* Initial Docker config

* Use image with credentials

* Supply an environment

* Needs write permission on id-token

* Use any valid environment

* Split into two jobs with different runners.

* whitespace

* Download client software first

* Download artifcat to tmp

* Zip file must be inside build context

* Temporarily disable root script

* Add ignore file

* Add comments

* Fix Scan path

* Remove odd character

* Rename steps for clarity

* Remove ambiguous naming

* What is in the SARIF file?

* Run on failure

* Ignore preexisting CVE rules

* Image should have different name from Ansible one

* Run the root script

* Push to correct ECR

* Allow read for id-token

* Set environment

* Tag image

* Use consistent tags

* Fix tagging

* Push latest docker image

* Add AWS Client v2

* Use newer download action

* Use newer version of upload artifact

* Add command to keep container running

* Run a dummy web server to keep it running

* Use Non Temporary Directory

* Separate the executable

* Add variable

* Add TNS Names Configuration

* Copy the file earlier

* Cannot use path

* COPY sets ownership unexpectedly

* Add jq to docker image

* Add SQLNET.ORA

* whitespace

* Change retrieval of SYS password

* Use mkstore to add credentials

* Run the Observer

* Stop previous observers

Avoid build up of inactive observers in the configuration

* Rebuild image on main branch only

* Remove commented out code

* Do not run the observer during development

* Commit changes made by code formatters

* Build image on branch

* Remove debug

* Add Standby DBs to wallet and wait for them to be available

* Enable run observer script

* Commit changes made by code formatters

---------

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/playbooks/oracle_ha/build-ha/tasks/set-fsfo-mode.yml
+++ b/playbooks/oracle_ha/build-ha/tasks/set-fsfo-mode.yml
@@ -59,6 +59,9 @@
   delay: 60
   retries: 60
 
+- debug:
+    var: fsfo_mode
+
 # Prepare for Mode Change if Needed
 - name: Disable Fast-Start Failover
   shell: |
