--- a/.github/workflows/ldap-rbac-uplift.yml
+++ b/.github/workflows/ldap-rbac-uplift.yml
@@ -10,6 +10,7 @@ on:
             - "test"
             - "stage"
             - "preprod"
+            - "prod"
 
       rbac_tag:
         required: true
