Checkout the Oracle Backup Code

--- a/.github/workflows/oracle-db-audit-replication-management.yml
+++ b/.github/workflows/oracle-db-audit-replication-management.yml
@@ -98,6 +98,7 @@ jobs:
           sparse-checkout-cone-mode: false
           sparse-checkout: |
                playbooks/oracle_audit_replication_management
+               playbooks/oracle_backup
                playbooks/ansible.cfg
                common/*
           path: operations
