--- a/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/restart_tasks.yml
+++ b/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/restart_tasks.yml
@@ -5,7 +5,7 @@
   delegate_to: "{{ source_endpoint_host }}"
   environment: 
      OEM_SECRET_ROLE: "{{ oem_secret_role }}"
-     CATALOG_DB: "{{ catalog_db }}"
+     CATALOG_DB: "{{ catalog }}"
      MAX_SEQNO: "{{ max_seqno }}"
      
 - name: Restart Business Interaction Replication Task
