--- a/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/restart_tasks.yml
+++ b/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/restart_tasks.yml
@@ -2,7 +2,7 @@
 # that DMS uses as the repolication source
 - name: Restore Archivelogs
   script: restore_archivelogs.sh
-  delegate_to: "{{ source_endpoint_host }}"
+  delegate_to: "{{ groups[source_endpoint_host][0] }}"
   environment: 
      OEM_SECRET_ROLE: "{{ oem_secret_role }}"
      CATALOG_DB: "{{ catalog }}"
