--- a/playbooks/oracle_duplicate/rman-pre-duplicate.yml
+++ b/playbooks/oracle_duplicate/rman-pre-duplicate.yml
@@ -103,3 +103,19 @@
     target_host: "{{ duplicate_target }}"
     action: "block"
   when: duplicate_target |  regex_search('.*_delius_primarydb')
+
+# Once users have been locked out, we can run one final checksum of all audited interaction data
+- name: Calculate Final Audited Interaction Checksum
+  script: ../../common/files/calculate_audited_interaction_checksum.sh
+  when: duplicate_target |  regex_search('.*_delius_primarydb')
+
+# Include role inside a block so that it may be delegated
+- name: Stop Audited Interaction Replication
+  when: duplicate_target |  regex_search('.*_delius_primarydb')
+  delegate_to: localhost
+  become: no
+  block:
+    - include_role:
+        name: oracle_audit_replication_management
+      vars:
+        replication_action: stop
