--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -232,8 +232,8 @@ jobs:
           -e duplicate_target=${{ steps.preparation.outputs.DuplicateTarget }} 
 
   stop-audit-replication:
-    if: ${{ success('oracle-rman-pre-duplicate')  && (github.event_name != 'repository_dispatch') && (startsWith(github.event.inputs.TargetHost, 'delius_')) }}
-    needs: [oracle-rman-pre-duplicate]
+    if: ${{ success('oracle-rman-pre-duplicate') && (github.event_name != 'repository_dispatch') && (startsWith(github.event.inputs.TargetHost, 'delius_')) }}
+    needs: oracle-rman-pre-duplicate
     uses: ./.github/workflows/oracle-db-audit-replication-management.yml
     with:
       TargetEnvironment: ${{ github.event.inputs.TargetEnvironment }}
