--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -513,7 +513,6 @@ jobs:
           DuplicateTarget=environment_name_$(echo ${TargetEnvironment} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/preprod/preproduction_preprod/;s/stage/preproduction_stage/;s/-/_/g')_${TargetHost}
           echo "DuplicateTarget=${DuplicateTarget}" >> $GITHUB_OUTPUT
           echo "SourceLegacy=$(echo $Inputs | jq -r '.SourceLegacy')" >> $GITHUB_OUTPUT
-          echo "SourceLegacy=$(echo $Inputs | jq -r '.SourceLegacy')"
           Action='${{ github.event.action }}'
           if [ "$Action" = "oracle-rman-duplicate-success" ]
           then
@@ -542,70 +541,65 @@ jobs:
       JobId: ${{ github.job }}
     steps:
 
+      - name: Checkout hmpps-delius-operation-automation
+        uses: actions/checkout@v4
+        with:
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            playbooks/oracle_duplicate
+            playbooks/oracle_parameters
+            playbooks/oracle_autotasks
+            playbooks/delius_users
+            playbooks/delius_gdpr
+            playbooks/cfo_extract
+            playbooks/alfresco_wallet
+            playbooks/oracle_statspack
+            playbooks/mis_database_links
+            common/*
+            playbooks/ansible.cfg
+          path: operations
+          ref: ${{ env.SourceCodeVersion }}
+          fetch-depth: 0
+
+      - name: Checkout Ansible Inventory From modernisation-platform-configuration-management
+        uses: actions/checkout@v4
+        with:
+          repository: ministryofjustice/modernisation-platform-configuration-management
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            ansible/hosts
+            ansible/group_vars
+          path: inventory
+          ref: ${{ env.SourceConfigVersion }}
+          fetch-depth: 0
+
+      - name: Checkout Ansible Required Roles From modernisation-platform-configuration-management
+        uses: actions/checkout@v4
+        with:
+          repository: ministryofjustice/modernisation-platform-configuration-management
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            ansible/roles/secretsmanager-passwords
+            ansible/roles/get-modernisation-platform-facts
+          path: roles
+          ref: ${{ env.SourceConfigVersion }}
+          fetch-depth: 0
+
+      - name: Configure AWS Credentials
+        id: login-aws
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+          role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
+          aws-region: "eu-west-2"
+
       - name: Start Ansible Oracle RMAN Post Duplicate
         shell: bash
         run: |
-          echo $ansible_config
-
-      # - name: Checkout hmpps-delius-operation-automation
-      #   uses: actions/checkout@v4
-      #   with:
-      #     sparse-checkout-cone-mode: false
-      #     sparse-checkout: |
-      #       playbooks/oracle_duplicate
-      #       playbooks/oracle_parameters
-      #       playbooks/oracle_autotasks
-      #       playbooks/delius_users
-      #       playbooks/delius_gdpr
-      #       playbooks/cfo_extract
-      #       playbooks/alfresco_wallet
-      #       playbooks/oracle_statspack
-      #       playbooks/mis_database_links
-      #       common/*
-      #       playbooks/ansible.cfg
-      #     path: operations
-      #     ref: ${{ env.SourceCodeVersion }}
-      #     fetch-depth: 0
-
-      # - name: Checkout Ansible Inventory From modernisation-platform-configuration-management
-      #   uses: actions/checkout@v4
-      #   with:
-      #     repository: ministryofjustice/modernisation-platform-configuration-management
-      #     sparse-checkout-cone-mode: false
-      #     sparse-checkout: |
-      #       ansible/hosts
-      #       ansible/group_vars
-      #     path: inventory
-      #     ref: ${{ env.SourceConfigVersion }}
-      #     fetch-depth: 0
-
-      # - name: Checkout Ansible Required Roles From modernisation-platform-configuration-management
-      #   uses: actions/checkout@v4
-      #   with:
-      #     repository: ministryofjustice/modernisation-platform-configuration-management
-      #     sparse-checkout-cone-mode: false
-      #     sparse-checkout: |
-      #       ansible/roles/secretsmanager-passwords
-      #       ansible/roles/get-modernisation-platform-facts
-      #     path: roles
-      #     ref: ${{ env.SourceConfigVersion }}
-      #     fetch-depth: 0
-
-      # - name: Configure AWS Credentials
-      #   id: login-aws
-      #   uses: aws-actions/configure-aws-credentials@v4
-      #   with:
-      #     role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
-      #     role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
-      #     aws-region: "eu-west-2"
-
-      # - name: Start Ansible Oracle RMAN Post Duplicate
-      #   shell: bash
-      #   run: |
-      #     export ANSIBLE_CONFIG=$ansible_config
-      #     ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_duplicate/roles
-      #     $ansible_playbook_directory/rman-post-duplicate.yml -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -i $inventory \
-      #     -e duplicate_target=${{ env.DuplicateTarget }}
+          export ANSIBLE_CONFIG=$ansible_config
+          ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_duplicate/roles
+          $ansible_playbook_directory/rman-post-duplicate.yml -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -i $inventory \
+          -e duplicate_target=${{ env.DuplicateTarget }}
 
   oracle-build-ha:
     if:  ${{ (needs.oracle-rman-duplicate-check.outputs.RestoreDatetime != '0' || needs.oracle-rman-duplicate-check.outputs.RestoreDatetime == null) && ( needs.oracle-rman-post-duplicate.result == 'success' || needs.oracle-rman-post-duplicate.result == 'skipped' ) && (needs.oracle-rman-duplicate-check.outputs.SourceLegacy == 'no' || needs.oracle-rman-duplicate-check.outputs.SourceLegacy == 'duplicate' || needs.oracle-rman-duplicate-check.outputs.SourceLegacy == 'open') }}
