--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -548,6 +548,7 @@ jobs:
             playbooks/alfresco_wallet
             playbooks/oracle_statspack
             playbooks/mis_database_links
+            playbooks/delius_objects
             common/*
             playbooks/ansible.cfg
           path: operations
