--- a/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/restart_tasks.yml
+++ b/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/restart_tasks.yml
@@ -1,3 +1,15 @@
+# Before we start we must ensure we have all the required redo logs available on the host
+# that DMS uses as the repolication source
+- name: Restore Archivelogs
+  script: restore_archivelogs.sh
+  delegate_to: "{{ groups[source_endpoint_host][0] }}"
+  become: true
+  become_user: oracle
+  environment:
+    OEM_SECRET_ROLE: "{{ oem_secret_role }}"
+    CATALOG_DB: "{{ catalog }}"
+    MAX_SEQNO: "{{ max_seqno }}"
+
 - name: Restart Business Interaction Replication Task
   include_tasks: restart_business_interaction_task.yml
 
