--- a/playbooks/oracle_audit_replication_management/playbook.yml
+++ b/playbooks/oracle_audit_replication_management/playbook.yml
@@ -19,6 +19,31 @@
           debug:
             msg: "Restarting Audit Replication from SCN {{ get_db_startup_scn.stdout | trim }}"
 
+        - name: Get Maximum Archived Redo Log Sequence Generated So Far
+          script: oracle_audit_replication_management/files/get_max_seq.sh
+          register: get_max_seq
+          changed_when: false
+
+# Prior to restarting the replication tasks we take a backup of all archivelogs
+# so that we can restore them onto the standby database used by DMS to ensure
+# it can read all changes since resetlogs
+- name: Backup Archivelogs
+  import_playbook: ../oracle_backup/backup.yml
+  when: replication_action == 'restart'
+  vars:
+    rman_target: "{{ target_hosts }}"
+    json_inputs: {}
+    daily_weekly: archivelog
+    min_seq: 1
+    max_seq: "{{ get_max_seq.stdout | trim }}"
+    run_in_foreground: true
+
+- hosts: "{{ target_hosts }}"
+  gather_facts: no
+  become: true
+  become_user: oracle
+
+  tasks:
     # Include role inside a block so that it may be delegated
     - name: Restart Audited Interaction Replication
       delegate_to: localhost
@@ -29,3 +54,4 @@
           vars:
             replication_action: restart
             audit_cdc_scn: "{{ get_db_startup_scn.stdout | default('') | trim }}"
+            max_seqno: "{{ get_max_seq.stdout | trim }}"
