Avoid cancellation of all workflows if one fails

--- a/.github/workflows/oracle-db-password-rotation-schedule.yml
+++ b/.github/workflows/oracle-db-password-rotation-schedule.yml
@@ -52,6 +52,7 @@ jobs:
     needs: prepare-run-matrix
     if: ${{ needs.prepare-run-matrix.outputs.scheduled_matrix != '{"include":[]}' }}
     strategy:
+      fail-fast: false
       matrix: ${{fromJson(needs.prepare-run-matrix.outputs.scheduled_matrix)}}
     name: Password Rotation
     uses:
