Run FSFO Metric Collection before removing monitoring exclusion

--- a/playbooks/oem_blackout/oem-blackout/tasks/script_exclusion.yml
+++ b/playbooks/oem_blackout/oem-blackout/tasks/script_exclusion.yml
@@ -52,7 +52,8 @@
     metric_name: "{{ item }}"
   loop:
     - dataguard_11gR2
-    
+    - fsfo_observers
+
 - name: Re-Include Hosts in Monitoring After Job Completion
   when: action == 'stop'
   block:
