Only create a new emcli session if required
Previous method of force meant that any errors would be hidden

--- a/playbooks/oem_blackout/oem-blackout/tasks/script_exclusion.yml
+++ b/playbooks/oem_blackout/oem-blackout/tasks/script_exclusion.yml
@@ -31,7 +31,11 @@
       shell: |
         . ~/.bash_profile
         export PATH=$PATH:{{ emcli_java_location }}
-        {{ emcli }} login -username=sysman -password={{ oem_sysman_password }} -force > /dev/null
+        RM=$({{ emcli }} sync 2>&1)
+        if [[ "$RM" == "Error: Session expired. Run emcli login to establish a session." ]];
+        then
+            {{ emcli }} login -username=sysman -password=${SYSMAN_PWD}
+        fi
         {{ emcli }} set_target_property_value -property_records="{{ get_agent_host.stdout }}:host:Comment:{{ exclude_comment }}"
       register: updatecomment
 
@@ -64,6 +68,10 @@
       shell: |
         . ~/.bash_profile
         export PATH=$PATH:{{ emcli_java_location }}
-        {{ emcli }} login -username=sysman -password={{ oem_sysman_password }} -force > /dev/null
+        RM=$({{ emcli }} sync 2>&1)
+        if [[ "$RM" == "Error: Session expired. Run emcli login to establish a session." ]];
+        then
+            {{ emcli }} login -username=sysman -password=${SYSMAN_PWD}
+        fi
         {{ emcli }} set_target_property_value -property_records="{{ get_agent_host.stdout }}:host:Comment:"
       register: updatecomment
