--- a/playbooks/oem_blackout/oem-blackout/tasks/script_exclusion.yml
+++ b/playbooks/oem_blackout/oem-blackout/tasks/script_exclusion.yml
@@ -22,7 +22,7 @@
 
     - name: Define Exclude Comment For Host
       set_fact:
-        exclude_comment: "{{ blackout | default('UNNAMED_BLACKOUT') + '_' + exclude_timeout }}"
+        exclude_comment: "{{ 'Excluded from monitoring due to ' + ( blackout | default('UNNAMED_EXCLUSION')) + ' until ' + exclude_timeout }}"
 
     - name: Get Sysman Password
       include_tasks: get_facts.yml
@@ -31,19 +31,32 @@
       shell: |
         . ~/.bash_profile
         export PATH=$PATH:{{ emcli_java_location }}
-        {{ emcli }} login -username=sysman -password={{ oem_sysman_password }} -force > /dev/null
+        RM=$({{ emcli }} sync 2>&1)
+        if [[ "$RM" == "Error: Session expired. Run emcli login to establish a session." ]];
+        then
+            {{ emcli }} login -username=sysman -password=${SYSMAN_PWD}
+        fi
         {{ emcli }} set_target_property_value -property_records="{{ get_agent_host.stdout }}:host:Comment:{{ exclude_comment }}"
       register: updatecomment
 
 # Some metrics should be explicitly re-evaluated as they are not gathered frequently and may be out of date when the exclusion is removed
-- name: Re-Evaluate Named Metrics
-  include_tasks: reevaluate_metrics.yml
+- name: Re-Evaluate Named Host Metrics
+  include_tasks: reevaluate_host_metrics.yml
   when: action == 'stop'
   vars:
     agent_target: "{{ get_agent_host.stdout | trim }}"
     metric_name: "{{ item }}"
   loop:
     - "ME$DATA_GUARD_ACTIVE_TARGET"
+
+- name: Re-Evaluate Named Database Metrics
+  include_tasks: reevaluate_database_metrics.yml
+  when: action == 'stop'
+  vars:
+    metric_name: "{{ item }}"
+  loop:
+    - dataguard_11gR2
+    - fsfo_observers
 
 - name: Re-Include Hosts in Monitoring After Job Completion
   when: action == 'stop'
@@ -55,6 +68,10 @@
       shell: |
         . ~/.bash_profile
         export PATH=$PATH:{{ emcli_java_location }}
-        {{ emcli }} login -username=sysman -password={{ oem_sysman_password }} -force > /dev/null
+        RM=$({{ emcli }} sync 2>&1)
+        if [[ "$RM" == "Error: Session expired. Run emcli login to establish a session." ]];
+        then
+            {{ emcli }} login -username=sysman -password=${SYSMAN_PWD}
+        fi
         {{ emcli }} set_target_property_value -property_records="{{ get_agent_host.stdout }}:host:Comment:"
       register: updatecomment
